<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <Button
            android:id="@+id/sendNotifButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Send Notifications"
            android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Waitlist:"
                android:textStyle="bold"
                android:textSize="25sp"/>
            <android.widget.Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/waitlistCapacityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Capacity: No Limit"
                android:textSize="25sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/seeMapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="See Map"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/noWaitlisteesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nobody has signed up yet."
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:visibility="gone"/>
        <ListView
            android:id="@+id/eventWaitlistListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">
            <TextView
                android:id="@+id/inviteList_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Inviteelist:"
                android:textStyle="bold"
                android:textSize="25sp"/>
            <android.widget.Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </LinearLayout>
        <TextView
            android:id="@+id/noinviteesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nobody has been invited yet."
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:visibility="gone"/>
        <ListView
            android:id="@+id/eventInvitelistListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">
            <TextView
                android:id="@+id/cancelList_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CancelledList:"
                android:textStyle="bold"
                android:textSize="25sp"/>
            <android.widget.Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </LinearLayout>
        <TextView
            android:id="@+id/noCancelledTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No entrant has been cancelled from the event yet."
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:visibility="gone"/>
        <ListView
            android:id="@+id/eventCancelledlistListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">
            <TextView
                android:id="@+id/attendeeList_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Final List of Entrants:"
                android:textStyle="bold"
                android:textSize="25sp"/>
            <android.widget.Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </LinearLayout>
        <TextView
            android:id="@+id/noAttendeeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No entrant is part of the final entrant list for this event yet."
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:visibility="gone"/>
        <ListView
            android:id="@+id/eventAttendeelistListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>