<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/uploadPoster"
        android:title="Upload Poster" />
    <item android:id="@+id/removePoster"
        android:title="Remove Poster" />
</menu>
